--- a/acunmedya_hafta7/ProductForm/Views/Home/Index.cshtml
+++ b/acunmedya_hafta7/ProductForm/Views/Home/Index.cshtml
@@ -1,54 +1,46 @@
-﻿@model ProductViewModel
-@using ProductForm.Models
-@using Microsoft.AspNetCore.Mvc.Rendering
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿
+@model ProductViewModel
 @{
-    ViewData["Title"] = "Home Page";
+    ViewBag.Title = "Product List";
 }
-
-<div class="card card-body my-3">
-    <form asp-action="Index" method="get">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-11">
-                    <select name="category"
-                       asp-items="@(new SelectList(Model.Categories, "CategoryId", "Name", Model.SelectedCategory))"
-
-                        class="form-select">
-                        <option value="0">Hepsi</option>
-                    </select>
-                </div>
-                <div class="col-md-1">
-                    <button type="submit" class="btn btn-primary">Filtrele</button>
-                </div>
+<div class=" card card-body my-3">
+<form asp-action="Index" method="get">
+    <div class="container">
+        <div class="row">
+            <div class="col-mb-11">
+                <select name="category" asp-items="@(new SelectList(Model.Categories,"CategoryId","Name",Model.SelectedCategory))"class="form-select">
+                    <option value="0">Tüm Kategoriler</option>
+                </select>
+            </div>
+            <div class="col-md-1">
+                <button type="submit"  class="btn btn-primary"> Filtrele</button>
             </div>
         </div>
-    </form>
+    </div>
+</form>
 </div>
-<table class="table table-bordered table-striped">
+<table class="table table-bordered table-stripped"> 
     <thead>
         <tr>
-            <th>@Html.DisplayNameFor(model => model.Products.FirstOrDefault().ProductId)
-</th>
-            <th>@Html.DisplayNameFor(model =>model.Products.FirstOrDefault().image)</th>
-            <th>@Html.DisplayNameFor(model => model.Products.FirstOrDefault().Name)</th>
-            <th>@Html.DisplayNameFor(model => model.Products.FirstOrDefault().Price)</th>
-            <th>Settings</th>
+            <th style=" width: 100px;">@Html.DisplayNameFor(m=>m.Products[0].ProductId)</th>
+            <th>@Html.DisplayNameFor(m=>m.Products[0].Name)</th>
+            <th>@Html.DisplayNameFor(m=>m.Products[0].Price)</th>
+            <th style="width: 100px;">@Html.DisplayNameFor(m=>m.Products[0].image)</th>
+            <th>Ayarlar</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var prd in Model.Products )
+        @foreach (var item in @Model.Products)
         {
-        <tr>
-            <td>@prd.ProductId</td>
-            <td><img src="~/img/@prd.image" alt="" style="width: 100px; height: 100px;" /></td>
-            <td>@prd.Name</td>
-            <td>@prd.Price</td>
-            <td>
-                <a href="" class="btn btn-sm btn-warning">Edit</a>
-                <a href="" class="btn btn-sm btn-danger">Delete</a>
-            </td>
-        </tr>
+            <tr>
+                <td>@item.ProductId</td>
+                <td>@item.Name</td>
+                <td>@item.Price</td>
+                <td><img src="~/img/@item.image" class="img-fluid" alt=""></td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ProductId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })
+                </td>
+            </tr>
         }
-    </tbody>
 </table>
