--- a/acunmedya_hafta7/ProductForm/Views/Home/Index.cshtml
+++ b/acunmedya_hafta7/ProductForm/Views/Home/Index.cshtml
@@ -3,44 +3,64 @@
 @{
     ViewBag.Title = "Product List";
 }
-<div class=" card card-body my-3">
-<form asp-action="Index" method="get">
-    <div class="container">
-        <div class="row">
-            <div class="col-mb-11">
-                <select name="category" asp-items="@(new SelectList(Model.Categories,"CategoryId","Name",Model.SelectedCategory))"class="form-select">
-                    <option value="0">Tüm Kategoriler</option>
-                </select>
-            </div>
-            <div class="col-md-1">
-                <button type="submit"  class="btn btn-primary"> Filtrele</button>
+
+
+<div class="card card-body my-3">
+    <form asp-action="Index" method="get">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-11">
+                    <select name="category"
+                        asp-items="@(new SelectList(Model.Categories, "CategoryId", "Name", Model.SelectedCategory))"
+                        class="form-select">
+                        <option value="0">Hepsi</option>
+                    </select>
+                </div>
+                <div class="col-md-1">
+                    <button type="submit" class="btn btn-primary">Filtrele</button>
+                </div>
             </div>
         </div>
-    </div>
-</form>
+    </form>
 </div>
-<table class="table table-bordered table-stripped"> 
-    <thead>
-        <tr>
-            <th style=" width: 100px;">@Html.DisplayNameFor(m=>m.Products[0].ProductId)</th>
-            <th>@Html.DisplayNameFor(m=>m.Products[0].Name)</th>
-            <th>@Html.DisplayNameFor(m=>m.Products[0].Price)</th>
-            <th style="width: 100px;">@Html.DisplayNameFor(m=>m.Products[0].image)</th>
-            <th>Ayarlar</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in @Model.Products)
-        {
+<form asp-action="EditProducts" method="post">
+
+    <table class="table table-bordered table-striped">
+        <thead>
             <tr>
-                <td>@item.ProductId</td>
-                <td>@item.Name</td>
-                <td>@item.Price</td>
-                <td><img src="~/img/@item.image" class="img-fluid" alt=""></td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ProductId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })
-                </td>
+                <th style="width: 100px;">@Html.DisplayNameFor(m => m.Products[0].ProductId)</th>
+                <th style="width: 100px;">@Html.DisplayNameFor(m => m.Products[0].image)</th>
+                <th>@Html.DisplayNameFor(m => m.Products[0].Name)</th>
+                <th>@Html.DisplayNameFor(m => m.Products[0].Price)</th>
+                <th></th>
+                <th style="width: 140px;">Settigns</th>
             </tr>
-        }
-</table>
+        </thead>
+        <tbody>
+            @for (var i = 0; i < @Model.Products.Count; i++)
+            {
+
+                <tr>
+                    <td>@Model.Products[i].ProductId</td>
+                    <input type="hidden" asp-for="@Model.Products[i].ProductId">
+                    <td>
+                        <img src="~/img/@Model.Products[i].image" class="img-fluid" alt="">
+                    </td>
+                    <td>@Model.Products[i].Name</td>
+                    <td>@Model.Products[i].Price</td>
+                    <td>
+                        <input type="checkbox" asp-for="@Model.Products[i].IsActive">
+                    </td>
+                    <td>
+                        <a asp-controller="Home" asp-action="Edit" asp-route-id="@Model.Products[i].ProductId"
+                            class="btn btn-sm btn-warning">Edit</a>
+                        <a asp-controller="Home" asp-action="Delete" asp-route-id="@Model.Products[i].ProductId"
+                            class="btn btn-sm btn-danger">Delete</a>
+                    </td>
+                </tr>
+            }
+
+        </tbody>
+    </table>
+    <button type="submit" class="btn btn-primary">Kaydet</button>
+</form>
